# PhiGEN

./: .dockerignore  .env.example  .gitignore  2025-11-08-00-34am-first-kali-session.txt  611251248.txt  AI_INTEGRATION_COMPLETE.md  ANTHROPIC_API_COST_OPTIMIZATION.md  CUSTOM_COMMANDS_GUIDE.md  DEV_COMMANDS.md  DISCORD_MCP_SETUP.md  DISCORD_QUICK_SEND.md  DISCORD_WEBHOOK_TEST.md  DOCKER_TO_WINDOWS_BRIDGE.md  Dockerfile  GIT_BRANCHING_GUIDE.md  MACRO_SEQUENCE_EXPLANATION.md  MCP_INTEGRATION_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  MULTIMODEL_BOT_GUIDE.md  MULTIMODEL_COMPLETE.md  Makefile  PROJECT_STRUCTURE.md  README.md  REMOTE_COMMAND_GUIDE.md  REMOTE_COMMAND_QUICKSTART.md  RESTRUCTURE_COMPLETE.md  RUN_PASSWORD_VAULT.bat  RUN_PHIVECTOR.bat  RUN_STATUS_MONITOR.bat  START_PHIGEN_SYSTEM.bat  STATUS_CHECK.bat  STATUS_MONITOR.bat  STOP_PHIGEN_SYSTEM.bat  TEST_COMMANDS.md  UI_CLIPPING_FIX.md  UPDATED_FEATURES.md  WHATS_COMPLETE.md  WINDOW_RESIZE_FIX_v2.md  WINDOW_SIZE_FIX.md  convert_svg.py  (+30 more)
.claude/: COMMANDS_README.md  claude_context.md  settings.local.json
.dc/: guidelines.md
.jc/: guidelines.md
BotFILES/: AUTOMATION_SETUP.md  JC_COMMUNICATION_GUIDE.md  README_AUTONOMOUS_WORKER.md  desktop_claude_monitor.py  discord_bot_mcp_enhanced.py  discord_mcp_bridge.py  get_pending.py  jc_auto_prompt.txt  jc_requirements.txt  jc_task_monitor.py  mcp_command_queue.jsonl  pending.txt  requirements_mcp.txt  shared_messages.jsonl  simple_test.py  start_bot.bat  start_claude_monitor.bat  start_jc_discord.bat  start_mcp_integration.bat  task_queue.txt  test_autonomous_worker.py  test_mcp_bridge.py  type_to_claude_desktop.py
DO NOT USE YET/: MUSTS.md
RESOURCES FROM OUTSIDE PROJECT(NOT PART OF CODEBASE YET)/: QT_DESIGNER_CHEATSHEET.md  QT_DESIGNER_LAYOUT_GUIDE.md  UI_COMPARISON.md  analyze_ui_layout.py  new 1.md
TBI_features/: DISCORD_BOT_FEATURES.md  FEATURE_01_Voice_Channel_Integration.md  FEATURE_02_Code_Execution_Sandbox.md  FEATURE_03_Project_Context_Injection.md  FEATURE_04_Scheduled_Tasks.md  FEATURE_05_Multi_User_Collaboration.md  FEATURE_06_Git_Integration.md  FEATURE_07_Smart_Notifications.md  FEATURE_08_Knowledge_Base_RAG.md  FEATURE_09_Code_Review_Queue.md  FEATURE_10_Debug_Assistant.md  FEATURE_11_Webhook_Integrations.md  README.md  (+9 more)
(+189 files in other folders)
